fix(style): fix posts container  overflow

--- a/src/index.css
+++ b/src/index.css
@@ -97,7 +97,7 @@
   .content-list {
     @apply flex flex-col-reverse
     h-screen w-full m-0 pt-[10vh] pb-14
-    overflow-scroll;
+    overflow-y-scroll overflow-x-hidden;
   }
 
   .post {
